exercises/helm-basics/helm-app/netpol-app.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: podinfo
  # TODO: fill in
  namespace: ""
spec:
  endpointSelector:
    matchLabels:
      # TODO: fill in
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: guida-ingress-nginx
            app.kubernetes.io/component: controller
            app.kubernetes.io/instance: ingress-nginx
            app.kubernetes.io/name: ingress-nginx
      toPorts:
        - ports:
            - port: "9898"
